# notes-grep

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.beads/: config.yaml  issues.jsonl
.codex/: config.toml
.github/workflows/: ci.yml
diagrams/: notes-grep-project-status.mmdx
docs/: CLI_CONTRACT.md  VIRAL_PRODUCT_SCORE_NO_RAGRETS.md  plan-cli-output-refactor.md  plan-search-engine-layer.md  profiling-hot-paths.md  proof-apple-notes-access.md
docs/research/: 2026-06-01-apple-notes-local-search-landscape.md  2026-06-01-gtm-seo-community-channels.md
scripts/: coverage-linker
skills/apple-notes-organizer/: SKILL.md
skills/apple-notes-organizer/assets/templates/: migration-spec.yaml
skills/apple-notes-organizer/references/: apple-notes-organization-principles.md  full-drain-triage.md  migration-plan-template.md
skills/apple-notes-organizer/scripts/: audit_notes_cache.py
src/: body.rs  cli.rs  folder.rs  lib.rs  main.rs  notes.rs
tests/: cli.rs
