[package]
name = "notes-grep"
version = "0.1.0"
edition = "2024"
description = "Fast local Apple Notes search CLI"
license = "MIT"
repository = "https://github.com/build000r/notes-grep"
readme = "README.md"
keywords = ["apple-notes", "notes", "search", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.85"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "docs/CLI_CONTRACT.md",
    "src/**/*.rs",
    "tests/**/*.rs",
]

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
dirs = "6.0.0"
flate2 = "1.1.9"
regex = "1.11"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

[[bin]]
name = "ng"
path = "src/main.rs"
